--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     <div class="background-image"><img src="./images/Illustration.png"/ alt="Vector image"></div>
     <header class="header-container">
       <div class="header-title-container"><h2 class="header-title">John Doe</h2></div>
-      <div class="menu-icon-container"><button class="button header-menu-icon"><img src="./images/Menu.svg" alt="Menu icon"/></button></div>
+      <div class="menu-icon-container"><a class="button header-menu-icon" href="#"><img src="./images/Menu.svg" alt="Menu icon"/></a></div>
     </header>
     <section class="headline-container">
       <h1 class="headline-title">Hey There.<br>I’m Alex</h1>
       <h2 class="headline-subtitle">I’am a Software Developer</h2>
       <p class="headline-text">I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
       <div class="social-media-button-group">
-        <button class="button social-media-button"><img src="./images/GitHub.svg" alt="Github icon"/></button>
-        <button class="button social-media-button"><img src="./images/Linkedin.svg" alt="Linkedin icon"/></button>
-        <button class="button social-media-button"><img src="./images/Angelist.svg" alt="Angelist icon"/></button>
-        <button class="button social-media-button"><img src="./images/Twitter.svg" alt="Twitter icon"/></button>
-        <button class="button social-media-button"><img src="./images/Medium.svg" alt="Medium icon"/></button>
+        <a class="button social-media-button" href="#"><img src="./images/GitHub.svg" alt="Github icon"/></a>
+        <a class="button social-media-button" href="#"><img src="./images/Linkedin.svg" alt="Linkedin icon"/></a>
+        <a class="button social-media-button" href="#"><img src="./images/Angelist.svg" alt="Angelist icon"/></a>
+        <a class="button social-media-button" href="#"><img src="./images/Twitter.svg" alt="Twitter icon"/></a>
+        <a class="button social-media-button" href="#"><img src="./images/Medium.svg" alt="Medium icon"/></a>
       </div>
     </section>
   </main>
