Add link to homepage in Logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main>
     <header class="header-container">
-      <div class="header-title-container"><h2 class="header-title">John Doe</h2></div>
+      <div class="header-title-container"><a class="header-title" href="/" alt="Logo">John Doe</a></div>
       <div class="menu-icon-container"><a class="button header-menu-icon" href="#"><img src="./images/Menu.svg" alt="Menu icon"/></a></div>
     </header>
     <section class="headline-container">
