Change wrap in hamburger button to nav

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main>
     <header class="header-container">
       <div class="header-title-container"><a class="header-title" href="/" alt="Logo">John Doe</a></div>
-      <div class="menu-icon-container"><a class="button header-menu-icon" href="#"><img src="./images/Menu.svg" alt="Menu icon"/></a></div>
+      <nav class="menu-icon-container"><a class="button header-menu-icon" href="#"><img src="./images/Menu.svg" alt="Menu icon"/></a></nav>
     </header>
     <section class="headline-container">
       <h1 class="headline-title">Hey There.<br>I’m Alex</h1>
