--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <section class="headline-container">
       <h1 class="headline-title">Hey There.<br>I’m Alex</h1>
-      <h2 class="headline-subtitle">I’am a Software Developer</h2>
+      <p class="headline-subtitle">I’am a Software Developer</p>
       <p class="headline-text">I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
       <div class="social-media-button-group">
         <a class="button social-media-button" href="#"><img src="./images/GitHub.svg" alt="Github icon"/></a>
