Change social media button group to ul and add links to social media pages

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <h1 class="headline-title">Hey There.<br>I’m Alex</h1>
       <p class="headline-subtitle">I’am a Software Developer</p>
       <p class="headline-text">I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
-      <div class="social-media-button-group">
-        <a class="button social-media-button" href="#"><img src="./images/GitHub.svg" alt="Github icon"/></a>
-        <a class="button social-media-button" href="#"><img src="./images/Linkedin.svg" alt="Linkedin icon"/></a>
-        <a class="button social-media-button" href="#"><img src="./images/Angelist.svg" alt="Angelist icon"/></a>
-        <a class="button social-media-button" href="#"><img src="./images/Twitter.svg" alt="Twitter icon"/></a>
-        <a class="button social-media-button" href="#"><img src="./images/Medium.svg" alt="Medium icon"/></a>
-      </div>
+      <ul class="social-media-button-group">
+        <li class="button social-media-button"><a href="https://github.com/mperezbazan" target="_blank"><img src="./images/GitHub.svg" alt="Github icon"/></a></li>
+        <li class="button social-media-button"><a href="https://linkedin.com/in/mperezbazan" target="_blank"><img src="./images/Linkedin.svg" alt="Linkedin icon"/></a></li>
+        <li class="button social-media-button"><a href="https://angel.co/u/martin-perez-bazan" target="_blank"><img src="./images/Angelist.svg" alt="Angelist icon"/></a></li>
+        <li class="button social-media-button"><a href="https://twitter.com/mperezbazan" target="_blank"><img src="./images/Twitter.svg" alt="Twitter icon"/></a></li>
+        <li class="button social-media-button"><a href="https://medium.com/@martin.perezbazan" target="_blank"><img src="./images/Medium.svg" alt="Medium icon"/></a></li>
+      </ul>
     </section>
   </main>
 </body>
