--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <p class="headline-subtitle">I’am a Software Developer</p>
       <p class="headline-text">I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
       <ul class="social-media-button-group">
-        <li class="button social-media-button"><a href="https://github.com/mperezbazan" target="_blank"><img src="./images/GitHub.svg" alt="Github icon"/></a></li>
-        <li class="button social-media-button"><a href="https://linkedin.com/in/mperezbazan" target="_blank"><img src="./images/Linkedin.svg" alt="Linkedin icon"/></a></li>
-        <li class="button social-media-button"><a href="https://angel.co/u/martin-perez-bazan" target="_blank"><img src="./images/Angelist.svg" alt="Angelist icon"/></a></li>
-        <li class="button social-media-button"><a href="https://twitter.com/mperezbazan" target="_blank"><img src="./images/Twitter.svg" alt="Twitter icon"/></a></li>
-        <li class="button social-media-button"><a href="https://medium.com/@martin.perezbazan" target="_blank"><img src="./images/Medium.svg" alt="Medium icon"/></a></li>
+        <li class="button social-media-button"><a href="https://github.com/mperezbazan"><img src="./images/GitHub.svg" alt="Github icon"/></a></li>
+        <li class="button social-media-button"><a href="https://linkedin.com/in/mperezbazan"><img src="./images/Linkedin.svg" alt="Linkedin icon"/></a></li>
+        <li class="button social-media-button"><a href="https://angel.co/u/martin-perez-bazan"><img src="./images/Angelist.svg" alt="Angelist icon"/></a></li>
+        <li class="button social-media-button"><a href="https://twitter.com/mperezbazan"><img src="./images/Twitter.svg" alt="Twitter icon"/></a></li>
+        <li class="button social-media-button"><a href="https://medium.com/@martin.perezbazan"><img src="./images/Medium.svg" alt="Medium icon"/></a></li>
       </ul>
     </section>
   </main>
