Add Works section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Crete+Round&family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <title>Portfolio</title>
 </head>
@@ -27,6 +27,158 @@
         <li class="button social-media-button"><a href="https://twitter.com/mperezbazan"><img src="./images/Twitter.svg" alt="Twitter icon"/></a></li>
         <li class="button social-media-button"><a href="https://medium.com/@martin.perezbazan"><img src="./images/Medium.svg" alt="Medium icon"/></a></li>
       </ul>
+    </section>
+    <section class="works-container">
+      <div class="works-title-container">
+        <p class="works-title">
+          My Recent Works
+        </p>
+      </div>
+      <div class="works-divider-container">
+        <hr class="works-divider"/>
+      </div>
+      <article class="work-container">
+        <div class="work-image-container">
+          <img src="./images/image2.png"/>
+        </div>
+        <p class="work-title light">
+          Multi-Post Stories
+        </p>
+        <p class="work-text light">
+          A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
+        </p>
+        <ul class="work-tag-group">
+          <li class="work-tag light">css</li>
+          <li class="work-tag light">html</li>
+          <li class="work-tag light">bootstrap</li>
+          <li class="work-tag light">Ruby</li>
+        </ul>
+        <div class="work-footer-container-light">
+          <a class="work-button button light">
+            See Project
+          </a>
+        </div>
+      </article>
+      <article class="work-container bg-image">
+        <div class="work-content-dark">
+          <p class="work-title dark">
+            Profesional Art Printing Data
+          </p>
+          <p class="work-text dark">
+            A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
+          </p>
+          <ul class="work-tag-group">
+            <li class="work-tag-dark">html</li>
+            <li class="work-tag-dark">bootstrap</li>
+            <li class="work-tag-dark">Ruby</li>
+          </ul>
+        </div>
+        <div class="work-footer-container-dark">
+          <a class="work-button button dark">
+            See Project
+          </a>
+        </div>
+      </article>
+      <article class="work-container bg-image">
+        <div class="work-content-dark">
+          <p class="work-title dark">
+            Profesional Art Printing Data
+          </p>
+          <p class="work-text dark">
+            A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
+          </p>
+          <ul class="work-tag-group">
+            <li class="work-tag-dark">html</li>
+            <li class="work-tag-dark">bootstrap</li>
+            <li class="work-tag-dark">Ruby</li>
+          </ul>
+        </div>
+        <div class="work-footer-container-dark">
+          <a class="work-button button dark">
+            See Project
+          </a>
+        </div>
+      </article>
+      <article class="work-container bg-image">
+        <div class="work-content-dark">
+          <p class="work-title dark">
+            Profesional Art Printing Data
+          </p>
+          <p class="work-text dark">
+            A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
+          </p>
+          <ul class="work-tag-group">
+            <li class="work-tag-dark">html</li>
+            <li class="work-tag-dark">bootstrap</li>
+            <li class="work-tag-dark">Ruby</li>
+          </ul>
+        </div>
+        <div class="work-footer-container-dark">
+          <a class="work-button button dark">
+            See Project
+          </a>
+        </div>
+      </article>
+      <article class="work-container bg-image">
+        <div class="work-content-dark">
+          <p class="work-title dark">
+            Profesional Art Printing Data
+          </p>
+          <p class="work-text dark">
+            A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
+          </p>
+          <ul class="work-tag-group">
+            <li class="work-tag-dark">html</li>
+            <li class="work-tag-dark">bootstrap</li>
+            <li class="work-tag-dark">Ruby</li>
+          </ul>
+        </div>
+        <div class="work-footer-container-dark">
+          <a class="work-button button dark">
+            See Project
+          </a>
+        </div>
+      </article>
+      <article class="work-container bg-image">
+        <div class="work-content-dark">
+          <p class="work-title dark">
+            Profesional Art Printing Data
+          </p>
+          <p class="work-text dark">
+            A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
+          </p>
+          <ul class="work-tag-group">
+            <li class="work-tag-dark">html</li>
+            <li class="work-tag-dark">bootstrap</li>
+            <li class="work-tag-dark">Ruby</li>
+          </ul>
+        </div>
+        <div class="work-footer-container-dark">
+          <a class="work-button button dark">
+            See Project
+          </a>
+        </div>
+      </article>
+      <article class="work-container bg-image">
+        <div class="work-content-dark">
+          <p class="work-title dark">
+            Profesional Art Printing Data
+          </p>
+          <p class="work-text dark">
+            A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
+          </p>
+          <ul class="work-tag-group">
+            <li class="work-tag-dark">html</li>
+            <li class="work-tag-dark">bootstrap</li>
+            <li class="work-tag-dark">Ruby</li>
+          </ul>
+        </div>
+        <div class="work-footer-container-dark">
+          <a class="work-button button dark">
+            See Project
+          </a>
+        </div>
+      </article>
     </section>
   </main>
 </body>
