--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
       </article>
       <article class="work-container bg-image">
         <div class="work-content-dark">
-          <h3 class="work-title dark">
+          <p class="work-title dark">
             Profesional Art Printing Data
-          </h3>
+          </p>
           <p class="work-text dark">
             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
           </p>
@@ -81,9 +81,9 @@
       </article>
       <article class="work-container bg-image">
         <div class="work-content-dark">
-          <h3 class="work-title dark">
+          <p class="work-title dark">
             Profesional Art Printing Data
-          </h3>
+          </p>
           <p class="work-text dark">
             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
           </p>
@@ -101,9 +101,9 @@
       </article>
       <article class="work-container bg-image">
         <div class="work-content-dark">
-          <h3 class="work-title dark">
+          <p class="work-title dark">
             Profesional Art Printing Data
-          </h3>
+          </p>
           <p class="work-text dark">
             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
           </p>
@@ -121,9 +121,9 @@
       </article>
       <article class="work-container bg-image">
         <div class="work-content-dark">
-          <h3 class="work-title dark">
+          <p class="work-title dark">
             Profesional Art Printing Data
-          </h3>
+          </p>
           <p class="work-text dark">
             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
           </p>
@@ -141,9 +141,9 @@
       </article>
       <article class="work-container bg-image">
         <div class="work-content-dark">
-          <h3 class="work-title dark">
+          <p class="work-title dark">
             Profesional Art Printing Data
-          </h3>
+          </p>
           <p class="work-text dark">
             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
           </p>
@@ -161,9 +161,9 @@
       </article>
       <article class="work-container bg-image">
         <div class="work-content-dark">
-          <h3 class="work-title dark">
+          <p class="work-title dark">
             Profesional Art Printing Data
-          </h3>
+          </p>
           <p class="work-text dark">
             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
           </p>
