Resolve comments from review

--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
   <main>
     <header class="header-container">
       <div class="header-title-container"><a class="header-title" href="/" alt="Logo">John Doe</a></div>
-      <nav class="menu-icon-container"><a class="button header-menu-icon" href="#"><img src="./images/Menu.svg" alt="Menu icon"/></a></nav>
+      <nav class="menu-icon-container"><a class="button-head header-menu-icon" href="#"><img src="./images/Menu.svg" alt="Menu icon"/></a></nav>
     </header>
     <section class="headline-container">
       <h1 class="headline-title">Hey There.<br>I’m Alex</h1>
       <p class="headline-subtitle">I’am a Software Developer</p>
       <p class="headline-text">I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
       <ul class="social-media-button-group">
-        <li class="button social-media-button"><a href="https://github.com/mperezbazan"><img src="./images/GitHub.svg" alt="Github icon"/></a></li>
-        <li class="button social-media-button"><a href="https://linkedin.com/in/mperezbazan"><img src="./images/Linkedin.svg" alt="Linkedin icon"/></a></li>
-        <li class="button social-media-button"><a href="https://angel.co/u/martin-perez-bazan"><img src="./images/Angelist.svg" alt="Angelist icon"/></a></li>
-        <li class="button social-media-button"><a href="https://twitter.com/mperezbazan"><img src="./images/Twitter.svg" alt="Twitter icon"/></a></li>
-        <li class="button social-media-button"><a href="https://medium.com/@martin.perezbazan"><img src="./images/Medium.svg" alt="Medium icon"/></a></li>
+        <li class="button-head social-media-button"><a href="https://github.com/mperezbazan"><img src="./images/GitHub.svg" alt="Github icon"/></a></li>
+        <li class="button-head social-media-button"><a href="https://linkedin.com/in/mperezbazan"><img src="./images/Linkedin.svg" alt="Linkedin icon"/></a></li>
+        <li class="button-head social-media-button"><a href="https://angel.co/u/martin-perez-bazan"><img src="./images/Angelist.svg" alt="Angelist icon"/></a></li>
+        <li class="button-head social-media-button"><a href="https://twitter.com/mperezbazan"><img src="./images/Twitter.svg" alt="Twitter icon"/></a></li>
+        <li class="button-head social-media-button"><a href="https://medium.com/@martin.perezbazan"><img src="./images/Medium.svg" alt="Medium icon"/></a></li>
       </ul>
     </section>
     <section class="works-container">
       <div class="works-title-container">
-        <p class="works-title">
+        <h2 class="works-title">
           My Recent Works
-        </p>
+        </h2>
       </div>
       <div class="works-divider-container">
         <hr class="works-divider"/>
@@ -41,9 +41,9 @@
         <div class="work-image-container">
           <img src="./images/image2.png"/>
         </div>
-        <p class="work-title light">
+        <h3 class="work-title light">
           Multi-Post Stories
-        </p>
+        </h3>
         <p class="work-text light">
           A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
         </p>
@@ -54,7 +54,7 @@
           <li class="work-tag light">Ruby</li>
         </ul>
         <div class="work-footer-container-light">
-          <a class="work-button button light">
+          <a class="button">
             See Project
           </a>
         </div>
@@ -74,7 +74,7 @@
           </ul>
         </div>
         <div class="work-footer-container-dark">
-          <a class="work-button button dark">
+          <a class="work-button button dark fullwidth">
             See Project
           </a>
         </div>
@@ -94,7 +94,7 @@
           </ul>
         </div>
         <div class="work-footer-container-dark">
-          <a class="work-button button dark">
+          <a class="work-button button dark fullwidth">
             See Project
           </a>
         </div>
@@ -114,7 +114,7 @@
           </ul>
         </div>
         <div class="work-footer-container-dark">
-          <a class="work-button button dark">
+          <a class="work-button button dark fullwidth">
             See Project
           </a>
         </div>
@@ -134,7 +134,7 @@
           </ul>
         </div>
         <div class="work-footer-container-dark">
-          <a class="work-button button dark">
+          <a class="work-button button dark fullwidth">
             See Project
           </a>
         </div>
@@ -154,7 +154,7 @@
           </ul>
         </div>
         <div class="work-footer-container-dark">
-          <a class="work-button button dark">
+          <a class="work-button button dark fullwidth">
             See Project
           </a>
         </div>
@@ -174,7 +174,7 @@
           </ul>
         </div>
         <div class="work-footer-container-dark">
-          <a class="work-button button dark">
+          <a class="work-button button dark fullwidth">
             See Project
           </a>
         </div>
@@ -182,7 +182,7 @@
     </section>
     <section class="about-container">
       <div class="about-content">
-        <p class="about-title">About me</p>
+        <h2 class="about-title">About me</h2>
         <p class="about-text">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
         <a class="button">
           Get My Resume
