--- a/index.html
+++ b/index.html
@@ -240,6 +240,16 @@
         </ul>
       </div>
     </section>
+    <section class="white-background">
+      <form class="make-flex">
+        <h3 id="form-headline">
+          I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
+        </h3>
+        <input type="text" class="inputs" placeholder="Full name">
+        <input type="text" class="inputs" placeholder="Full name">
+        <textarea placeholder="enter something" name="" class="inputs" id="" cols="30" rows="10"></textarea>
+      </form>
+    </section>
   </main>
 </body>
 </html>
