--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
   <main>
     <header class="header-container">
-      <div class="header-title-container"><a class="header-title" href="/" alt="Logo">John Doe</a></div>
+      <div class="header-title-container"><a class="header-title" href="/" alt="Logo">mPB</a></div>
       <nav class="menu-icon-container"><a class="button-head header-menu-icon" href="#"><img src="./images/Menu.svg" alt="Menu icon"/></a></nav>
     </header>
     <section class="headline-container">
-      <h1 class="headline-title">Hey There.<br>I’m Alex</h1>
+      <h1 class="headline-title">Hey There.<br>I’m Martin</h1>
       <p class="headline-subtitle">I’am a Software Developer</p>
       <p class="headline-text">I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
       <ul class="social-media-button-group">
