--- a/index.html
+++ b/index.html
@@ -14,12 +14,22 @@
   <main>
     <header class="header-container">
       <div class="header-title-container"><a class="header-title" href="/" alt="Logo">mPB</a></div>
-      <nav class="menu-icon-container"><a class="button-head header-menu-icon" href="#"><img src="./images/Menu.svg" alt="Menu icon"/></a></nav>
+      <nav class="menu-icon-container lg-none"><a class="button-head header-menu-icon" href="#"><img src="./images/Menu.svg" alt="Menu icon"/></a></nav>
+      <nav class="menu-container-lg sm-none">
+        <ul class="nav-button-group">
+          <li class="nav-button">Portfolio</li>
+          <li class="nav-button">About</li>
+          <li class="nav-button">Contact</li>
+          <li class="nav-button"><img src="./images/Email.svg"></li>
+        </ul>
+      </nav>
     </header>
     <section class="headline-container">
-      <h1 class="headline-title">Hey There.<br>I’m Martin</h1>
-      <p class="headline-subtitle">I’am a Software Developer</p>
-      <p class="headline-text">I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+      <div class="headline-content">
+        <h1 class="headline-title">Hey There.<br>I’m Martin</h1>
+        <p class="headline-subtitle">I’am a Software Developer</p>
+        <p class="headline-text">I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+      </div>
       <ul class="social-media-button-group">
         <li class="button-head social-media-button"><a href="https://github.com/mperezbazan"><img src="./images/GitHub.svg" alt="Github icon"/></a></li>
         <li class="button-head social-media-button"><a href="https://linkedin.com/in/mperezbazan"><img src="./images/Linkedin.svg" alt="Linkedin icon"/></a></li>
@@ -37,7 +47,7 @@
       <div class="works-divider-container">
         <hr class="works-divider"/>
       </div>
-      <article class="work-container">
+      <article class="work-container work-main">
         <div class="work-image-container">
           <img src="./images/image2.png"/>
         </div>
@@ -59,7 +69,14 @@
           </a>
         </div>
       </article>
-      <article class="work-container bg-image">
+      <article class="work-container work-light">
+        <div class="work-footer-container-dark">
+          <a class="work-button button dark fullwidth">
+            See Project
+          </a>
+        </div>
+      </article>
+      <article class="work-container bg-image data-image">
         <div class="work-content-dark">
           <h3 class="work-title dark">
             Profesional Art Printing Data
@@ -73,13 +90,13 @@
             <li class="work-tag-dark">Ruby</li>
           </ul>
         </div>
-        <div class="work-footer-container-dark">
+        <div class="work-footer-container-dark lg-none">
           <a class="work-button button dark fullwidth">
             See Project
           </a>
         </div>
       </article>
-      <article class="work-container bg-image">
+      <article class="work-container bg-image website-image">
         <div class="work-content-dark">
           <h3 class="work-title dark">
             Profesional Art Printing Data
@@ -93,13 +110,13 @@
             <li class="work-tag-dark">Ruby</li>
           </ul>
         </div>
-        <div class="work-footer-container-dark">
+        <div class="work-footer-container-dark lg-none">
           <a class="work-button button dark fullwidth">
             See Project
           </a>
         </div>
       </article>
-      <article class="work-container bg-image">
+      <article class="work-container bg-image professional-image">
         <div class="work-content-dark">
           <h3 class="work-title dark">
             Profesional Art Printing Data
@@ -113,13 +130,13 @@
             <li class="work-tag-dark">Ruby</li>
           </ul>
         </div>
-        <div class="work-footer-container-dark">
+        <div class="work-footer-container-dark lg-none">
           <a class="work-button button dark fullwidth">
             See Project
           </a>
         </div>
       </article>
-      <article class="work-container bg-image">
+      <article class="work-container bg-image data-image">
         <div class="work-content-dark">
           <h3 class="work-title dark">
             Profesional Art Printing Data
@@ -133,13 +150,13 @@
             <li class="work-tag-dark">Ruby</li>
           </ul>
         </div>
-        <div class="work-footer-container-dark">
+        <div class="work-footer-container-dark lg-none">
           <a class="work-button button dark fullwidth">
             See Project
           </a>
         </div>
       </article>
-      <article class="work-container bg-image">
+      <article class="work-container bg-image website-image">
         <div class="work-content-dark">
           <h3 class="work-title dark">
             Profesional Art Printing Data
@@ -153,13 +170,13 @@
             <li class="work-tag-dark">Ruby</li>
           </ul>
         </div>
-        <div class="work-footer-container-dark">
+        <div class="work-footer-container-dark lg-none">
           <a class="work-button button dark fullwidth">
             See Project
           </a>
         </div>
       </article>
-      <article class="work-container bg-image">
+      <article class="work-container bg-image lg-none">
         <div class="work-content-dark">
           <h3 class="work-title dark">
             Profesional Art Printing Data
@@ -263,7 +280,7 @@
         <li class="footer-social-media-button"><a href="https://twitter.com/mperezbazan"><img src="./images/Twitter-dark.svg" alt="Twitter icon"/></a></li>
         <li class="footer-social-media-button"><a href="https://medium.com/@martin.perezbazan"><img src="./images/Medium-dark.svg" alt="Medium icon"/></a></li>
       </ul>
-      <hr class="footer-bottom-line"/>
+      <hr class="footer-bottom-line lg-none"/>
     </section>
   </main>
 </body>
