--- a/index.html
+++ b/index.html
@@ -43,33 +43,33 @@
         <h2 class="works-title">
           My Recent Works
         </h2>
-      </div>
-      <div class="works-divider-container">
         <hr class="works-divider"/>
       </div>
       <article class="work-container work-main">
         <div class="work-image-container">
-          <img src="./images/image2.png"/>
+          <img class="work-main-image" src="./images/image2.png"/>
         </div>
-        <h3 class="work-title light">
-          Multi-Post Stories
-        </h3>
-        <p class="work-text light">
-          A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
-        </p>
-        <ul class="work-tag-group">
-          <li class="work-tag light">css</li>
-          <li class="work-tag light">html</li>
-          <li class="work-tag light">bootstrap</li>
-          <li class="work-tag light">Ruby</li>
-        </ul>
-        <div class="work-footer-container-light">
-          <a class="button">
-            See Project
-          </a>
+        <div class="work-main-content">
+          <h3 class="work-title light">
+            Multi-Post Stories
+          </h3>
+          <p class="work-text light">
+            A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
+          </p>
+          <ul class="work-tag-group">
+            <li class="work-tag light">css</li>
+            <li class="work-tag light">html</li>
+            <li class="work-tag light">bootstrap</li>
+            <li class="work-tag light">Ruby</li>
+          </ul>
+          <div class="work-footer-container-light">
+            <a class="button">
+              See Project
+            </a>
+          </div>
         </div>
       </article>
-      <article class="work-container work-light">
+      <article class="work-container work-light sm-none">
         <div class="work-footer-container-dark">
           <a class="work-button button dark fullwidth">
             See Project
@@ -78,8 +78,11 @@
       </article>
       <article class="work-container bg-image data-image">
         <div class="work-content-dark">
-          <h3 class="work-title dark">
+          <h3 class="work-title dark lg-none">
             Profesional Art Printing Data
+          </h3>
+          <h3 class="work-title dark sm-none">
+            Data Dashboard Healthcare
           </h3>
           <p class="work-text dark">
             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
@@ -98,8 +101,11 @@
       </article>
       <article class="work-container bg-image website-image">
         <div class="work-content-dark">
-          <h3 class="work-title dark">
+          <h3 class="work-title dark lg-none">
             Profesional Art Printing Data
+          </h3>
+          <h3 class="work-title dark sm-none">
+            Website Protfolio
           </h3>
           <p class="work-text dark">
             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
@@ -119,7 +125,7 @@
       <article class="work-container bg-image professional-image">
         <div class="work-content-dark">
           <h3 class="work-title dark">
-            Profesional Art Printing Data
+            Profesional Art Printing Data <span class="sm-none">More</span>
           </h3>
           <p class="work-text dark">
             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
