--- a/index.html
+++ b/index.html
@@ -263,11 +263,11 @@
         </ul>
       </div>
     </section>
-    <section class="white-background make-flex">
-      <form class="make-flex" action="https://formspree.io/f/mrgdqveo" method="POST">
-        <h3 id="form-headline">
-          I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
-        </h3>
+    <section class="white-background">
+      <h3 id="form-headline">
+        I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
+      </h3>
+      <form class="make-flex contact-form" action="https://formspree.io/f/mrgdqveo" method="POST">
         <label for="name" hidden>Name</label>  
         <input type="text" name="Name" id="name" class="inputs" placeholder="Full name" maxlength="50" required>
         <label for="email" hidden>Email</label>
