Change images from works sections and correct titles

--- a/index.html
+++ b/index.html
@@ -144,8 +144,11 @@
       </article>
       <article class="work-container bg-image data-image">
         <div class="work-content-dark">
-          <h3 class="work-title dark">
+          <h3 class="work-title dark lg-none">
             Profesional Art Printing Data
+          </h3>
+          <h3 class="work-title dark sm-none">
+            Data Dashboard Healthcare
           </h3>
           <p class="work-text dark">
             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
@@ -164,8 +167,11 @@
       </article>
       <article class="work-container bg-image website-image">
         <div class="work-content-dark">
-          <h3 class="work-title dark">
+          <h3 class="work-title dark lg-none">
             Profesional Art Printing Data
+          </h3>
+          <h3 class="work-title dark sm-none">
+            Website Protfolio
           </h3>
           <p class="work-text dark">
             A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
