Change flebox properties for work-main to solve img width

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <nav class="menu-icon-container lg-none"><a class="button-head header-menu-icon" href="#"><img src="./images/Menu.svg" alt="Menu icon"/></a></nav>
       <nav class="menu-container-lg sm-none">
         <ul class="nav-button-group">
-          <li class="nav-button">Portfolio</li>
-          <li class="nav-button">About</li>
-          <li class="nav-button">Contact</li>
-          <li class="nav-button"><img src="./images/Email.svg"></li>
+          <li class="nav-button"><a href="#Portfolio">Portfolio</a></li>
+          <li class="nav-button"><a href="#About">About</a></li>
+          <li class="nav-button"><a href="#Contact">Contact</a></li>
+          <li class="nav-button"><a href="mailto:martin.perezbazan@gmail.com"><img src="./images/Email.svg"></a></li>
         </ul>
       </nav>
     </header>
@@ -38,7 +38,7 @@
         <li class="button-head social-media-button"><a href="https://medium.com/@martin.perezbazan"><img src="./images/Medium.svg" alt="Medium icon"/></a></li>
       </ul>
     </section>
-    <section class="works-container">
+    <section class="works-container" id="Portfolio">
       <div class="works-title-container">
         <h2 class="works-title">
           My Recent Works
@@ -46,7 +46,7 @@
         <hr class="works-divider"/>
       </div>
       <article class="work-container work-main">
-        <div class="work-image-container">
+        <div class="work-main-image-container">
           <img class="work-main-image" src="./images/image2.png"/>
         </div>
         <div class="work-main-content">
@@ -209,7 +209,7 @@
         </div>
       </article>
     </section>
-    <section class="about-container">
+    <section class="about-container" id="About">
       <div class="about-content">
         <h2 class="about-title">About me</h2>
         <p class="about-text">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
@@ -269,7 +269,7 @@
         </ul>
       </div>
     </section>
-    <section class="white-background">
+    <section class="white-background" id="Contact">
       <h3 id="form-headline">
         I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
       </h3>
