Change Github Icon to root and change the type of file to png

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     <!-- Footer -->
     <section class="footer-container">
       <ul class="footer-button-group">
-        <li class="footer-social-media-button"><a href="https://github.com/mperezbazan"><img src="./images/GitHubDark.svg" alt="Github icon"/></a></li>
+        <li class="footer-social-media-button"><a href="https://github.com/mperezbazan"><img src="./githubIcon.png" alt="Github icon"/></a></li>
         <li class="footer-social-media-button"><a href="https://linkedin.com/in/mperezbazan"><img src="./images/Linkedin-dark.svg" alt="Linkedin icon"/></a></li>
         <li class="footer-social-media-button"><a href="https://angel.co/u/martin-perez-bazan"><img src="./images/Angelist-dark.svg" alt="Angelist icon"/></a></li>
         <li class="footer-social-media-button"><a href="https://twitter.com/mperezbazan"><img src="./images/Twitter-dark.svg" alt="Twitter icon"/></a></li>
