made an animation

--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
         </ul>
       </div>
     </section>
-    <section class="white-background">
-      <form class="make-flex">
+    <section class="white-background make-flex">
+      <form class="make-flex get-in-touch-form">
         <h3 id="form-headline">
           I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
         </h3>
